Refactor user and media routes and controllers
